fixed link overlap

--- a/rumblechart/rumblestyle.css
+++ b/rumblechart/rumblestyle.css
@@ -18,11 +18,16 @@ h2 {
     left: 50%;
     transform: translate(-50%, 0%);
     font-size: xx-large; }
-h3 {
+a.u {
+    position: fixed;
+    bottom: 10%;
+    left: 5%; 
+    font-size: medium;
+    color: #888; }
+a.d {
     position: fixed;
     bottom: 5%;
-    left: 5%; }
-a {
+    left: 5%; 
     font-size: medium;
     color: #888; }
 a.guide {
